[package]
name = "das-grid"
authors = ["Eduardo Pereira <eduardonunesp@gmail.com>"]
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "2D grid library which serves as fundamental building block for any 2D game built on the concept of grid"
homepage = "https://github.com/eduardonunesp/das-grid"
repository = "https://github.com/eduardonunesp/das-grid.git"
